--- a/transform.ipynb
+++ b/transform.ipynb
@@ -7,28 +7,99 @@
    "outputs": [],
    "source": [
     "from databaker.framework import *\n",
-    "from databakerUtils.writers import v4Writer ##\n",
     "import pandas as pd\n",
-    "from databakerUtils.sparsityFunctions import SparsityFiller ##\n",
-    "from databakerUtils.v4Functions import v4Integers ##\n",
     "import datetime, glob\n",
-    "from api_pipeline import Multi_Upload_To_Cmd ##\n",
     "\n",
-    "# file paths that may need to be changed\n",
+    "## these needed to be pointed to if not pip installed \n",
+    "from databakerUtils.sparsityFunctions import SparsityFiller \n",
+    "from databakerUtils.v4Functions import v4Integers \n",
+    "from databakerUtils.writers import v4Writer \n",
+    "from api_pipeline import Multi_Upload_To_Cmd \n",
+    "\n",
+    "### file paths that may need to be changed ###\n",
     "location = 'inputs/traffic-camera-activity/*.xlsx' # path to source data\n",
     "output = 'D:/' # output file written here\n",
     "metadata_file = 'inputs/traffic-camera-activity/traffic-camera-activity-time-series-v4.csv-metadata.json' # path to metadata file\n",
     "credentials = 'florence-details.json' # path to login details\n",
     "\n",
-    "file = glob.glob(location)\n",
-    "assert len(file) == 1, f\"should onlybe one input file not '{len(file)}'\"\n",
-    "file = file[0]\n",
-    "output_file = output + 'v4-traffic-camera-activity.csv'\n",
+    "def transform(location, output):\n",
+    "    file = glob.glob(location)\n",
+    "    assert len(file) == 1, f\"should onlybe one input file not '{len(file)}'\"\n",
+    "    file = file[0]\n",
+    "    output_file = output + 'v4-traffic-camera-activity.csv'\n",
     "\n",
-    "tabs = loadxlstabs(file)\n",
-    "tabs = [tab for tab in tabs if 'note' not in tab.name.lower()] # remove note tab\n",
+    "    tabs = loadxlstabs(file)\n",
+    "    tabs = [tab for tab in tabs if 'note' not in tab.name.lower()] # remove note tab\n",
     "\n",
-    "'''Functions'''\n",
+    "    conversionsegments = []\n",
+    "    for tab in tabs:\n",
+    "        junk = tab.filter(contains_string('Note:')).expand(DOWN).expand(RIGHT) # unwated notes\n",
+    "\n",
+    "        date = tab.excel_ref('A').expand(DOWN).is_not_blank().is_not_whitespace()\n",
+    "        date -= junk\n",
+    "\n",
+    "        area = tab.excel_ref('B1').expand(RIGHT).is_not_blank().is_not_whitespace()\n",
+    "\n",
+    "        vehicle = tab.excel_ref('B2').expand(RIGHT).is_not_blank().is_not_whitespace()\n",
+    "\n",
+    "        adjustment = tab.name\n",
+    "\n",
+    "        obs = area.waffle(date)\n",
+    "\n",
+    "        dimensions = [\n",
+    "                HDimConst(TIME, 'year'), # year to be filled in later\n",
+    "                HDimConst(GEOG, 'K02000001'),\n",
+    "                HDim(date, 'date', DIRECTLY, LEFT),\n",
+    "                HDim(area, 'area', DIRECTLY, ABOVE),\n",
+    "                HDim(vehicle, 'vehicle', DIRECTLY, ABOVE),\n",
+    "                HDimConst('adjustment', adjustment)\n",
+    "                ]\n",
+    "\n",
+    "        for cell in dimensions[2].hbagset:\n",
+    "            dimensions[2].AddCellValueOverride(cell, str(cell.value))\n",
+    "\n",
+    "        conversionsegment = ConversionSegment(tab, dimensions, obs).topandas()\n",
+    "        conversionsegments.append(conversionsegment)\n",
+    "\n",
+    "    data = pd.concat(conversionsegments)\n",
+    "    df = v4Writer('file-path', data, asFrame=True) \n",
+    "\n",
+    "    '''Post Processing'''\n",
+    "    df['V4_1'] = df['V4_1'].apply(v4Integers)\n",
+    "\n",
+    "    df['Time_codelist'] = df['date'].apply(DateToYear)\n",
+    "    df['Time'] = df['Time_codelist']\n",
+    "\n",
+    "    df['Geography'] = 'United Kingdom'\n",
+    "\n",
+    "    df['date_codelist'] = df['date'].apply(DateToDDMMM)\n",
+    "    df['date'] = df['date_codelist']\n",
+    "    df['date_codelist'] = df['date_codelist'].apply(lambda x: x.lower())\n",
+    "\n",
+    "    df['area_codelist'] = df['area'].apply(Slugize)\n",
+    "\n",
+    "    df['vehicle'] = df['vehicle'].apply(lambda x: x.capitalize())\n",
+    "    df['vehicle_codelist'] = df['vehicle'].apply(Slugize)\n",
+    "\n",
+    "    df['adjustment'] = df['adjustment'].apply(SeasonalAdjustment)\n",
+    "    df['adjustment_codelist'] = df['adjustment'].apply(Slugize)\n",
+    "\n",
+    "    df = df.rename(columns={\n",
+    "            'Time_codelist':'calendar-years',\n",
+    "            'Geography_codelist':'uk-only',\n",
+    "            'date_codelist':'dd-mm',\n",
+    "            'date':'DayMonth',\n",
+    "            'area_codelist':'traffic-camera-area',\n",
+    "            'area':'TrafficCameraArea',\n",
+    "            'vehicle_codelist':'pedestrians-and-vehicles',\n",
+    "            'vehicle':'PedestriansAndVehicles',\n",
+    "            'adjustment_codelist':'seasonal-adjustment',\n",
+    "            'adjustment':'SeasonalAdjustment'\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "    df.to_csv(output_file, index=False)\n",
+    "    SparsityFiller(output_file, '*')\n",
     "\n",
     "def DateToYear(value):\n",
     "    # pulls the year from the date -> date should have form 'yyyy-mm-dd 00:00:00'\n",
@@ -55,92 +126,24 @@
     "            }\n",
     "    return lookup[value]\n",
     "\n",
-    "'''DataBaking'''\n",
-    "conversionsegments = []\n",
-    "for tab in tabs:\n",
-    "    junk = tab.filter(contains_string('Note:')).expand(DOWN).expand(RIGHT) # unwated notes\n",
-    "    \n",
-    "    date = tab.excel_ref('A').expand(DOWN).is_not_blank().is_not_whitespace()\n",
-    "    date -= junk\n",
-    "    \n",
-    "    area = tab.excel_ref('B1').expand(RIGHT).is_not_blank().is_not_whitespace()\n",
-    "    \n",
-    "    vehicle = tab.excel_ref('B2').expand(RIGHT).is_not_blank().is_not_whitespace()\n",
-    "    \n",
-    "    adjustment = tab.name\n",
-    "    \n",
-    "    obs = area.waffle(date)\n",
-    "    \n",
-    "    dimensions = [\n",
-    "            HDimConst(TIME, 'year'), # year to be filled in later\n",
-    "            HDimConst(GEOG, 'K02000001'),\n",
-    "            HDim(date, 'date', DIRECTLY, LEFT),\n",
-    "            HDim(area, 'area', DIRECTLY, ABOVE),\n",
-    "            HDim(vehicle, 'vehicle', DIRECTLY, ABOVE),\n",
-    "            HDimConst('adjustment', adjustment)\n",
-    "            ]\n",
-    "    \n",
-    "    for cell in dimensions[2].hbagset:\n",
-    "        dimensions[2].AddCellValueOverride(cell, str(cell.value))\n",
-    "    \n",
-    "    conversionsegment = ConversionSegment(tab, dimensions, obs).topandas()\n",
-    "    conversionsegments.append(conversionsegment)\n",
-    "    \n",
-    "data = pd.concat(conversionsegments)\n",
-    "df = v4Writer('file-path', data, asFrame=True) \n",
+    "# Run transform\n",
+    "if __name__ == '__main__':\n",
+    "    # variables for upload\n",
+    "    dataset_id = 'traffic-camera-activity'\n",
+    "    edition = 'time-series'\n",
+    "    collection_name = 'CMD traffic camera activity'\n",
+    "    print(f\"Uploading {dataset_id} to CMD\")\n",
     "\n",
-    "'''Post Processing'''\n",
-    "df['V4_1'] = df['V4_1'].apply(v4Integers)\n",
+    "    upload_dict = {\n",
+    "            dataset_id:{\n",
+    "                    'v4':output_file,\n",
+    "                    'edition':edition,\n",
+    "                    'collection_name':collection_name,\n",
+    "                    'metadata_file':metadata_file\n",
+    "                    }\n",
+    "            }\n",
     "\n",
-    "df['Time_codelist'] = df['date'].apply(DateToYear)\n",
-    "df['Time'] = df['Time_codelist']\n",
-    "\n",
-    "df['Geography'] = 'United Kingdom'\n",
-    "\n",
-    "df['date_codelist'] = df['date'].apply(DateToDDMMM)\n",
-    "df['date'] = df['date_codelist']\n",
-    "df['date_codelist'] = df['date_codelist'].apply(lambda x: x.lower())\n",
-    "\n",
-    "df['area_codelist'] = df['area'].apply(Slugize)\n",
-    "\n",
-    "df['vehicle'] = df['vehicle'].apply(lambda x: x.capitalize())\n",
-    "df['vehicle_codelist'] = df['vehicle'].apply(Slugize)\n",
-    "\n",
-    "df['adjustment'] = df['adjustment'].apply(SeasonalAdjustment)\n",
-    "df['adjustment_codelist'] = df['adjustment'].apply(Slugize)\n",
-    "\n",
-    "df = df.rename(columns={\n",
-    "        'Time_codelist':'calendar-years',\n",
-    "        'Geography_codelist':'uk-only',\n",
-    "        'date_codelist':'dd-mm',\n",
-    "        'date':'DayMonth',\n",
-    "        'area_codelist':'traffic-camera-area',\n",
-    "        'area':'TrafficCameraArea',\n",
-    "        'vehicle_codelist':'pedestrians-and-vehicles',\n",
-    "        'vehicle':'PedestriansAndVehicles',\n",
-    "        'adjustment_codelist':'seasonal-adjustment',\n",
-    "        'adjustment':'SeasonalAdjustment'\n",
-    "        }\n",
-    "    )\n",
-    "\n",
-    "df.to_csv(output_file, index=False)\n",
-    "SparsityFiller(output_file, '*')\n",
-    "\n",
-    "# variables for upload\n",
-    "dataset_id = 'traffic-camera-activity'\n",
-    "edition = 'time-series'\n",
-    "collection_name = 'CMD traffic camera activity'\n",
-    "\n",
-    "upload_dict = {\n",
-    "        dataset_id:{\n",
-    "                'v4':output_file,\n",
-    "                'edition':edition,\n",
-    "                'collection_name':collection_name,\n",
-    "                'metadata_file':metadata_file\n",
-    "                }\n",
-    "        }\n",
-    "\n",
-    "Multi_Upload_To_Cmd(credentials, upload_dict)"
+    "    Multi_Upload_To_Cmd(credentials, upload_dict)"
    ]
   }
  ],
