--- a/transform.ipynb
+++ b/transform.ipynb
@@ -17,16 +17,16 @@
     "from api_pipeline import Multi_Upload_To_Cmd \n",
     "\n",
     "### file paths that may need to be changed ###\n",
-    "location = 'inputs/traffic-camera-activity/*.xlsx' # path to source data\n",
-    "output = 'D:/' # output file written here\n",
-    "metadata_file = 'inputs/traffic-camera-activity/traffic-camera-activity-time-series-v4.csv-metadata.json' # path to metadata file\n",
     "credentials = 'florence-details.json' # path to login details\n",
     "\n",
-    "def transform(location, output):\n",
+    "location = '*.xlsx' # path to source data\n",
+    "metadata_file = 'traffic-camera-activity-time-series-v4.csv-metadata.json' # path to metadata file\n",
+    "\n",
+    "def transform(location):\n",
     "    file = glob.glob(location)\n",
     "    assert len(file) == 1, f\"should onlybe one input file not '{len(file)}'\"\n",
     "    file = file[0]\n",
-    "    output_file = output + 'v4-traffic-camera-activity.csv'\n",
+    "    output_file = 'v4-traffic-camera-activity.csv'\n",
     "\n",
     "    tabs = loadxlstabs(file)\n",
     "    tabs = [tab for tab in tabs if 'note' not in tab.name.lower()] # remove note tab\n",
@@ -128,15 +128,19 @@
     "\n",
     "# Run transform\n",
     "if __name__ == '__main__':\n",
+    "    # run transform\n",
+    "    transform(location)\n",
+    "    \n",
     "    # variables for upload\n",
     "    dataset_id = 'traffic-camera-activity'\n",
     "    edition = 'time-series'\n",
     "    collection_name = 'CMD traffic camera activity'\n",
+    "    v4 = 'v4-traffic-camera-activity.csv'\n",
     "    print(f\"Uploading {dataset_id} to CMD\")\n",
     "\n",
     "    upload_dict = {\n",
     "            dataset_id:{\n",
-    "                    'v4':output_file,\n",
+    "                    'v4':v4,\n",
     "                    'edition':edition,\n",
     "                    'collection_name':collection_name,\n",
     "                    'metadata_file':metadata_file\n",
